tests/codegen/fail/interface/trait/argument_double_underscored.rs
use juniper::graphql_interface;

#[graphql_interface]
trait Character {
    fn id(&self, __num: i32) -> &str;
}

fn main() {}
